# megaposeClient

./: .gitignore  README.md
detection_client/: detection_node.py
launch/: detection.launch.py
src/: package.xml  setup.cfg  setup.py
src/detection_client/: detection_node.py
src/detection_client/meshes/cube/: cube.ply
